renaming header tabs

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body, html {
 </head>
 <body>
 <button class="tablink" onclick="openPage('Home', this, 'tomato')"id="defaultOpen">All</button>
-<button class="tablink" onclick="openPage('News', this, 'green')" >News</button>
-<button class="tablink" onclick="openPage('Contact', this, 'steelblue')">Contact</button>
-<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+<button class="tablink" onclick="openPage('News', this, 'green')" >Quiz</button>
+<button class="tablink" onclick="openPage('Contact', this, 'steelblue')">Ingredients</button>
+<button class="tablink" onclick="openPage('About', this, 'orange')">Contribute/Lessons</button>
 </body>
 
 <div id="Home" class="tabcontent">
@@ -63,18 +63,15 @@ body, html {
 </div>
 
  <div id="News" class="tabcontent">
-  <h3>News</h3>
-  <p>Some news this fine day!</p> 
+  <h3>Quiz</h3>
 </div>
 
 <div id="Contact" class="tabcontent">
-  <h3>Contact</h3>
-  <p>Get in touch, or swing by for a cup of coffee.</p>
+  <h3>Ingredient Search</h3>
 </div>
 
 <div id="About" class="tabcontent">
-  <h3>About</h3>
-  <p>Who we are and what we do.</p>
+  <h3>Contribute/lessons</h3>
 </div>
 
 <script>
