--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
   <head>
-    <script src="coffee.js"></script>
     <script src="myFunctions.js"></script>
     <link rel="stylesheet" type="text/css" href="all.css">
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
@@ -38,7 +37,7 @@ body, html {
     padding: 100px 20px;
     height: 100%;
 }
-    
+
 
 #Home {background-color: tomato;}
 #News {background-color: green;}
@@ -56,9 +55,9 @@ body, html {
 <div id="Home" class="tabcontent">
   <h3>Recipe Categories</h3>
    <div>
-      <button class="pie" onclick="pie()">Pie</button>
-      <button class="pasta" onclick="pasta()">Pasta</button>
-      <button class="sandwiches" onclick="sandwiches()">Sandwiches</button>
+      <button id="pie" onclick="openCat(id)">Pie</button>
+      <button id="pasta" onclick="openCat(id)">Pasta</button>
+      <button id="sandwiches" onclick="openCat(id)">Sandwiches</button>
     </div>
 </div>
 
