--- a/pasta.html
+++ b/pasta.html
@@ -2,58 +2,10 @@
 <head>
 <script src="pasta.js"></script>
     <link rel="stylesheet" type="text/css" href="pasta.css">
+    <link rel="stylesheet" type="text/css" href="recipes.css">
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box}
-body {font-family: "Advent Pro", sans-serif;}
-
-/* Style the tab */
-.tab {
-    float: left;
-    border: 1px solid #ccc;
-    background-color: #F1f1f1;
-    width: 30%;
-    height: 300px;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-    display: block;
-    background-color: inherit;
-    color: black;
-    padding: 22px 16px;
-    width: 100%;
-    border: none;
-    outline: none;
-    text-align: left;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 17px;
-    font-family:Advent Pro;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    float: left;
-    padding: 0px 12px;
-    border: 1px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 300px;
-}
-</style>
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <body>
 
 <h2>Pasta dishes</h2>
@@ -72,7 +24,7 @@ body {font-family: "Advent Pro", sans-serif;}
 
 <div id="Lasagna" class="tabcontent">
   <h3>Lasagna</h3>
-  <p>1 pound lean ground beef.<br> 4 cups tomato-basil pasta sauce.<br>6 uncooked lasagna noodles.<br>1 (15-ounce) container ricotta cheese.<br>2 1/2 cups (10 ounces) shredded mozzarella cheese.<br>1/4 cup hot water.</p> 
+  <p>1 pound lean ground beef.<br> 4 cups tomato-basil pasta sauce.<br>6 uncooked lasagna noodles.<br>1 (15-ounce) container ricotta cheese.<br>2 1/2 cups (10 ounces) shredded mozzarella cheese.<br>1/4 cup hot water.</p>
 </div>
 
 <div id="Macaroni & Cheese" class="tabcontent">
@@ -97,6 +49,6 @@ function openTab(evt, tabName) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-     
+
 </body>
-</html> 
+</html>
