--- a/pie.html
+++ b/pie.html
@@ -1,58 +1,10 @@
 <html>
+<head>
  <link rel= "stylesheet" type="text/css" href="pie.css">
+ <link rel="stylesheet" type="text/css" href="recipes.css">
  <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
  <script src="pie.js"></script>
  <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box}
-body {font-family: "Advent Pro", sans-serif;}
-
-/* Style the tab */
-.tab {
-    float: left;
-    border: 1px solid #ccc;
-    background-color: #E6E6FA;
-    width: 30%;
-    height: 300px;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-    display: block;
-    background-color: #E6E6FA;
-    color: black;
-    padding: 22px 16px;
-    width: 100%;
-    border: none;
-    outline: none;
-    text-align: left;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 17px;
-    font-family:Advent Pro;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    float: left;
-    padding: 0px 12px;
-    border: 1px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 300px;
-    background-color:#E6E6FA;
-}
-</style>
 </head>
 <body>
 
@@ -64,7 +16,7 @@ body {font-family: "Advent Pro", sans-serif;}
   <button class="tablinks" onclick="openCity(event, 'Paris')">Strawberry Rhubarb</button>
   <button class="tablinks" onclick="openCity(event, 'Tokyo')">Apple Pie</button>
   <button class="tablinks" onclick="openCity(event, 'Berlin')">Pumpkin Pie</button>
-  
+
 </div>
 
 <div id="London" class="tabcontent">
@@ -76,7 +28,7 @@ body {font-family: "Advent Pro", sans-serif;}
 <div id="Paris" class="tabcontent">
   <h3>Strawberry Rhubarb</h3>
   <p>Preheat oven to 400 degrees F (200 degrees C).<br>In a large bowl, mix flour and sugar.<br> Add strawberries and chopped rhubarb<br>Pour filling into pie crust<br>Apply yolk to top of pie, using a pastry brush<br>Bake at 400 degrees F (200 degrees C), for 35 to 40 minutes, or until bubbly and brown.
-</p> 
+</p>
 </div>
 
 <div id="Tokyo" class="tabcontent">
@@ -111,4 +63,4 @@ function openCity(evt, cityName) {
 document.getElementById("defaultOpen").click();
 </script>
 </body>
-</html> 
+</html>
