--- a/sandwiches.html
+++ b/sandwiches.html
@@ -1,57 +1,9 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="sandwiches.css">
+    <link rel="stylesheet" type="text/css" href="recipes.css">
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box}
-body {font-family: "Advent Pro", sans-serif;}
-
-/* Style the tab */
-.tab {
-    float: left;
-    border: 1px solid #ccc;
-    background-color: #F1f1f1;
-    width: 30%;
-    height: 300px;
-}
-
-/* Style the buttons inside the tab */
-.tab button {
-    display: block;
-    background-color: inherit;
-    color: black;
-    padding: 22px 16px;
-    width: 100%;
-    border: none;
-    outline: none;
-    text-align: left;
-    cursor: pointer;
-    transition: 0.3s;
-    font-size: 17px;
-    font-family:Advent Pro;
-}
-
-/* Change background color of buttons on hover */
-.tab button:hover {
-    background-color: #ddd;
-}
-
-/* Create an active/current "tab button" class */
-.tab button.active {
-    background-color: #ccc;
-}
-
-/* Style the tab content */
-.tabcontent {
-    float: left;
-    padding: 0px 12px;
-    border: 1px solid #ccc;
-    width: 70%;
-    border-left: none;
-    height: 300px;
-}
-</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -72,7 +24,7 @@ body {font-family: "Advent Pro", sans-serif;}
 
 <div id="Paris" class="tabcontent">
   <h3>Peanut Butter and Jelly</h3>
-  <p>2 slices whole wheat bread <br>1 teaspoon butter<br> tablespoon peanut butter <br>2 teaspoons strawberry jam 
+  <p>2 slices whole wheat bread <br>1 teaspoon butter<br> tablespoon peanut butter <br>2 teaspoons strawberry jam
 </div>
 
 <div id="Tokyo" class="tabcontent">
@@ -97,6 +49,6 @@ function openCity(evt, cityName) {
 // Get the element with id="defaultOpen" and click on it
 document.getElementById("defaultOpen").click();
 </script>
-     
+
 </body>
-</html> 
+</html>
