--- a/index.html
+++ b/index.html
@@ -1,43 +1,71 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
-    <link rel="stylesheet" type="text/css" href="all.css">
-    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <link rel="stylesheet" type="text/css" href="all.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Advent Pro"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
-<body>
-<button class="tablink" onclick="openPage('All', this, 'tomato')" id="defaultOpen">All</button>
-<button class="tablink" onclick="openPage('Quiz', this, 'green')" >Quiz</button>
-<button class="tablink" onclick="openPage('Ingredients', this, 'steelblue')">Ingredients</button>
-<button class="tablink" onclick="openPage('Lessons', this, 'orange')">Contribute/Lessons</button>
-</body>
+  <body>
+    <button
+      class="tablink"
+      onclick="openPage('All', this, 'tomato')"
+      id="defaultOpen"
+    >
+      All
+    </button>
+    <button class="tablink" onclick="openPage('Quiz', this, 'green')">
+      Quiz
+    </button>
+    <button
+      class="tablink"
+      onclick="openPage('Ingredients', this, 'steelblue')"
+    >
+      Ingredients
+    </button>
+    <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
+      Contribute/Lessons
+    </button>
+  </body>
 
-<div id="All" class="tabcontent">
-  <h3>Recipe Categories</h3>
-   <div>
+  <div id="All" class="tabcontent">
+    <h3>Recipe Categories</h3>
+    <div>
       <button id="pie" onclick="openCat(id)">Pie</button>
       <button id="pasta" onclick="openCat(id)">Pasta</button>
       <button id="sandwiches" onclick="openCat(id)">Sandwiches</button>
     </div>
-</div>
+  </div>
 
- <div id="Quiz" class="tabcontent">
-  <h3>Quiz</h3>
-</div>
+  <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
 
-<div id="Ingredients" class="tabcontent">
-  <h3>Ingredient Search</h3>
-</div>
+  <div id="Ingredients" class="tabcontent"><h3>Ingredient Search</h3></div>
 
-<div id="Lessons" class="tabcontent">
-  <h3>Contribute/lessons</h3>
-</div>
-
-<script>
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-
+  <div id="Lessons" class="tabcontent"><h3>Contribute/lessons</h3></div>
+  <script>
+    // Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+  </script>
+  <body>
+    <h1>I do not know but maybe this will work</h1>
+    <div id="food2fork" style="width:100%;height:400px;"></div>
+    <script>
+      function myMap() {
+        var mapProp = {
+          center: new google.maps.LatLng(51.508742, -0.12085),
+          zoom: 5
+        };
+        var map = new google.maps.Map(
+          document.getElementById("food2fork"),
+          mapProp
+        );
+      }
+    </script>
+    <json
+      src="https://www.food2fork.com/api/get?key=c4d3ccd2e7d4f9d9b3a6aaa4ba579825&callback=myMap"
+    ></json>
+  </body>
 </html>
