small change to rice crispie treats recipe

--- a/recipe_htmls/rice_crispie_treats.html
+++ b/recipe_htmls/rice_crispie_treats.html
@@ -19,7 +19,7 @@
         1/4 cup margarine <br />
         6 cups Rice Crispies
       </p>
-      <h3>Instructions</h3>
+      <h3>Instructions EDIT</h3>
       <p>
         1) Melt marchmallows with margarine in large saucepan over low heat,
         stirring until completely melted. <br />
