--- a/recipe_htmls/dressings and vegetables/zestyshrimpsalad.html
+++ b/recipe_htmls/dressings and vegetables/zestyshrimpsalad.html
@@ -2,7 +2,7 @@
   <head></head>
 
   <body>
-    <div id="Zesty Shrimp Salad"
+    <div id="Zesty Shrimp Salad">
     <h2> Zesty Shrimp Salad</h2>
 
     <h3>Ingredients</h3>
@@ -16,3 +16,5 @@
     <p>
       1) Combine shrimp, dressing and celery <br />
       2) Pile onto lettuce leaves and garnish with cooked egg or tomato <br />
+  </body>
+</html>
