--- a/recipe_htmls/dressings and vegetables/riceandbroccoli.html
+++ b/recipe_htmls/dressings and vegetables/riceandbroccoli.html
@@ -2,12 +2,12 @@
   <head> </head>
 
   <body>
-    <div id="Rice and Broccoli"
+    <div id="Rice and Broccoli">
     <h2>Rice and Broccoli</h2>
     <h3>Ingredients</h3>
     <p>
       <br />
       2 cups cooked rice <br />
-      
+      1 
   </body>
 </html>
