Added php file for the contact form

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h3>Contribute/Contact</h3>
 
   <div class="container">
-  <form action="/action_page.php" target="_blank" method="POST">
+  <form action="action_page.php" method="POST">
     <label for="name">Name</label>
     <input type="text" id="name" name="name" required="true" placeholder="Your name.." class="input-field" />
 
@@ -78,7 +78,7 @@
     <label for="message">Comment/Contribution</label>
     <textarea id="message" name="message" placeholder="Please contribute a recipe, or write down any questions and comments. Thank you for your contribution!" style="height:200px" required="true"></textarea>
 
-    <input id="submit_btn" class="btn btn-submit" type="submit" value="Submit" />
+    <input id="submit_btn" class="btn btn-submit" type="submit" value="Submit" >
 
     </form>
   </div>
