--- a/pasta.html
+++ b/pasta.html
@@ -11,62 +11,76 @@
   </head>
 
   <body>
-    <h2>Pastas</h2>
+    <h2>Cake</h2>
     <p>Click on the buttons to view recipies</p>
-
     <div class="tab">
-      <button
-        class="tablinks"
-        onclick="openTab(event, 'Baked Ziti')"
-        id="defaultOpen"
-      >
-        Baked Ziti
-      </button>
-      <button class="tablinks" onclick="openTab(event, 'Lasagna')">
-        Lasagna
-      </button>
-      <button class="tablinks" onclick="openTab(event, 'Macaroni & Cheese')">
-        Macaroni & Cheese
-      </button>
+      <button class="tablinks"onclick="openTab(event, 'Apple Lemon Cake')"id="defaultOpen">Apple Lemon Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Chiffon Cake')">Chiffon Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Chocolate Cake')">Chocolate Cake</button>
+	    <button class="tablinks" onclick="openTab(event, 'Cupcakes')">Cupcakes</button>
+      <button class="tablinks" onclick="openTab(event, 'Lemon Bars')">Lemon Bars</button>
+      <button class="tablinks" onclick="openTab(event, 'Raisin Cake')">Raisin Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Sheath Cake')">Sheath Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Whoopie Pies')">Whoopie Pies</button>
+    	<button class="tablinks" onclick="openTab(event, 'Vanilla Pudding Cake')">Vanilla Pudding Cake</button>
+	    <button class="tablinks" onclick="openTab(event, 'Apple Cake')">Apple Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Blueberry Cake')">Blueberry Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Pound Cake')">Pound Cake</button>
+      <button class="tablinks" onclick="openTab(event, 'Silver White Cake')">Silver White Cake</button>
     </div>
-
-    <div id="Baked Ziti" class="tabcontent">
-      <h3>Baked Ziti</h3>
-      <p>
-        1)Preheat the oven to 350 degrees F . <br />
-        2) Butter a 9x13 inch baking dish. <br />
-        3) Layer as follows: <br />
-        1/2 of the ziti <br />
-        Provolone cheese <br />
-        sour cream <br />
-        1/2 sauce mixture <br />
-        remaining ziti <br />
-        mozzarella cheese <br />Remaining sauce mixture <br />
-        Top with grated Parmesan cheese.
-      </p>
+    <div id="Apple Lemon Cake" class="tabcontent">
+     <body> 
+      <object width="100%" height="500px" data="recipe_htmls/cake/applelemoncake.html"></object>
     </div>
-
-    <div id="Lasagna" class="tabcontent">
-      <h3>Lasagna</h3>
-      <p>
-        1 pound lean ground beef. <br />
-        4 cups tomato-basil pasta sauce. <br />6 uncooked lasagna noodles.
-        <br />1 (15-ounce) container ricotta cheese. <br />2 1/2 cups (10
-        ounces) shredded mozzarella cheese. <br />1/4 cup hot water.
-      </p>
+    <div id="Chiffon Cake" class="tabcontent">
+     <body>
+	  <object width="100%" height="500px" data="recipe_htmls/cake/chiffoncake.html"></object>
     </div>
-
-    <div id="Macaroni & Cheese" class="tabcontent">
-      <h3>Macaroni & cheese</h3>
-      <p>
-        1 (8-oz.) package elbow macaroni. <br />2 tablespoons butter. <br />2
-        tablespoons all-purpose flour. <br />2 cups milk. <br />1/2 teaspoon
-        salt. <br />1/2 teaspoon fresh ground black pepper. <br />1/4 teaspoon
-        ground red pepper. <br />1 (8-oz.) block sharp Cheddar cheese, shredded
-        and divided.
-      </p>
+    <div id="Chocolate Cake" class="tabcontent">
+	  <body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/chocolatecake.html"></object>
     </div>
-
+    <div id="Cupcakes" class="tabcontent">
+	  <body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/cupcakes.html"></object>
+    </div>
+		<div id="Lemon Bars" class="tabcontent">
+    <body>
+	  <object width="100%" height="500px" data="recipe_htmls/cake/lemonbars.html"></object>
+    </div>
+    <div id="Raisin Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/raisincake.html"></object>
+	  </div>
+	  <div id="Sheath Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/sheathcake.html"></object>
+	  </div>
+    <div id="Whoopie Pies" class="tabcontent">
+	  <body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/whoopiepie.html"></object>
+    </div>
+	  <div id="Vanilla Pudding Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/vanillapuddingcake.html"></object>
+	  </div>
+    </div>
+	  <div id="Apple Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/applecake.html"></object>
+		</div>
+	  <div id="Blueberry Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="1000px" data="recipe_htmls/cake/blueberrycake.html"></object>
+		</div>
+	  <div id="Pound Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/poundcake.html"></object>
+		</div>
+	  <div id="Silver White Cake" class="tabcontent">
+		<body>
+		<object width="100%" height="500px" data="recipe_htmls/cake/silverwhitecake.html"></object>
+		</div>
     <script>
       document.getElementById("defaultOpen").click();
     </script>
