--- a/index.html
+++ b/index.html
@@ -1,65 +1,80 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
-    <link rel="stylesheet" type="text/css" href="all.css">
-    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="coffee.js"></script>
+    <link rel="stylesheet" type="text/css" href="all.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Advent Pro"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
-<body>
-<button class="tablink" onclick="openPage('All', this, 'tomato')" id="defaultOpen">All</button>
-<button class="tablink" onclick="openPage('Quiz', this, 'green')" >Quiz</button>
-<button class="tablink" onclick="openPage('Ingredients', this, 'steelblue')">Ingredients</button>
-<button class="tablink" onclick="openPage('Lessons', this, 'orange')">Contribute/Lessons</button>
-</body>
+  <body>
+    <button
+      class="tablink"
+      onclick="openPage('All', this, 'tomato')"
+      id="defaultOpen"
+    >
+      All
+    </button>
+    <button class="tablink" onclick="openPage('Quiz', this, 'green')">
+      Quiz
+    </button>
+    <button
+      class="tablink"
+      onclick="openPage('Ingredients', this, 'steelblue')"
+    >
+      Ingredients
+    </button>
+    <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
+      Contribute/Lessons
+    </button>
+  </body>
 
-<div id="All" class="tabcontent">
-  <h3>Recipe Categories</h3>
-   <div>
-      <button id="pie" onclick="openCat(id)">Pie</button>
-      <button id="pasta" onclick="openCat(id)">Pasta</button>
-      <button id="sandwiches" onclick="openCat(id)">Sandwiches</button>
+  <div id="All" class="tabcontent">
+    <h3>Recipe Categories</h3>
+    <div>
+      <button id="pie" onclick="pie()">Pie</button>
+      <button id="pasta" onclick="cake()">Cake</button>
+      <button id="sandwiches" onclick="sandwiches()">Sandwiches</button>
     </div>
-</div>
+  </div>
 
- <div id="Quiz" class="tabcontent">
-  <h3>Quiz</h3>
-</div>
+  <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
 
-<div id="Ingredients" class="tabcontent">
-  <h3>Ingredient Search</h3>
-</div>
+  <div id="Ingredients" class="tabcontent"><h3>Ingredient Search</h3></div>
 
-<div id="Lessons" class="tabcontent">
-
+  <div id="Lessons" class="tabcontent">
     <h3>Contribute/lessons</h3>
-  <div class="container">
-  <form action="action_page.php">
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name" placeholder="Your name..">
+    <div class="container">
+      <form action="action_page.php">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" placeholder="Your name.." />
 
-    <label for="email">Email</label>
-    <input type="text" id="email" name="email" placeholder="Your email..">
+        <label for="email">Email</label>
+        <input type="text" id="email" name="email" placeholder="Your email.." />
 
-    <label for="category">Category</label>
-    <select id="category" name="category">
-      <option value="contribution">Recipe contribution</option>
-      <option value="comments">Other comments</option>
-    </select>
+        <label for="category">Category</label>
+        <select id="category" name="category">
+          <option value="contribution">Recipe contribution</option>
+          <option value="comments">Other comments</option>
+        </select>
 
-    <label for="subject">Comment/Contribution</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        <label for="subject">Comment/Contribution</label>
+        <textarea
+          id="subject"
+          name="subject"
+          placeholder="Write something.."
+          style="height:200px"
+        ></textarea>
 
-    <input type="submit" value="Submit">
+        <input type="submit" value="Submit" />
+      </form>
+    </div>
+  </div>
 
-  </form>
-</div>
-</div>
-
-<script>
-// Get the element with id="defaultOpen" and click on it
-document.getElementById("defaultOpen").click();
-</script>
-
+  <script>
+    document.getElementById("defaultOpen").click();
+  </script>
 </html>
