--- a/sandwiches.html
+++ b/sandwiches.html
@@ -10,16 +10,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h2>Sandwich</h2>
+    <h2>Cakes</h2>
     <p>Click on the buttons to view recipies</p>
 
     <div class="tab">
       <button
         class="tablinks"
-        onclick="openTab(event, 'Pumpkin Seeds')"
-        id = "defaultOpen"
+        onclick="openTab(event, 'hamandcheese')"
+        id="defaultOpen"
       >
-        Pumpkin Seeds
+        Ham and Cheese
       </button>
       <button class="tablinks" onclick="openTab(event, 'pbandj')">
         Peanut butter and Jelly
@@ -29,11 +29,7 @@
       </button>
     </div>
 
-    <div id="Pumpkin Seeds" class="tabcontent">
-      <body> 
-        <object width = "100%" height = "500px" data="recipe_htmls/savory/roasted_pumpkin_seeds.html">
-      </body>
-    </div>
+    <div id="hamandcheese" class="tabcontent"><h3>Ham and Cheese</h3></div>
 
     <div id="pbandj" class="tabcontent">
       <h3>Peanut Butter and Jelly</h3>
