adds animations tab

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <script src="myFunctions.js"></script>
-    <script src="coffee.js"></script>
     <link rel="stylesheet" type="text/css" href="all.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Advent Pro"
@@ -23,11 +22,13 @@
     </button>
     <button
       class="tablink"
-      onclick="openPage('Ingredients', this, 'steelblue')"
-    >
+      onclick="openPage('Ingredients', this, 'steelblue')">
       Ingredients
     </button>
-    <button class="tablink" onclick="openPage('Lessons', this, 'orange')">
+    <button class="tablink" onclick="openPage('Animations', this, 'purple')">
+      Animations
+    </button>
+    <button class="tablink" onclick="openPage('Lessons', this, '#FFB6C1')">
       Lessons
     </button>
     <button class="tablink" onclick="openPage('Contribute', this, 'orange')">
@@ -45,6 +46,12 @@
   </div>
 
   <div id="Quiz" class="tabcontent"><h3>Quiz</h3></div>
+
+  <div id="Ingredients" class="tabcontent">
+  </div>
+
+  <div id="Animations" class="tabcontent">
+  </div>
 
 <div id="Lessons" class="tabcontent">
   <body>
